frappe/public/css/form.css
/* ... */
.timeline-item.user-content .avatar-medium {
  margin-right: 10px;
  height: 45px;
  width: 45px;
}
.timeline-item.user-content .action-btns {
  position: absolute;
  right: 0;
  padding: 5px 10px 2px 5px;
}
.timeline-item.user-content .comment-header {
  background-color: #fafbfc;
  padding: 10px 15px 10px 13px;
  margin: 0px;
  color: #8D99A6;
  border-bottom: 1px solid #EBEFF2;
}
.timeline-item.user-content .comment-header.links-active {
  padding-right: 60px;
}
.timeline-item.user-content .comment-header .commented-on-small {
  display: none;
}
.timeline-item.user-content .comment-header .octicon-heart {
  color: #ff5858;
  cursor: pointer;
}
.timeline-item.user-content .reply {
  padding: 15px;
  overflow: auto;
}
.timeline-item.user-content .reply > div > p:first-child {
  margin-top: 0px;
}
.timeline-item.user-content .reply > div > p:last-child {
  margin-bottom: 0px;
}
.timeline-item.user-content .reply hr {
  margin: 10px 0px;
}
.timeline-item.user-content .close-btn-container .close {
  color: inherit;
  opacity: 1;
}
.timeline-item.user-content .edit-btn-container {
  padding: 0 10px 0 0;
}
.timeline-item.user-content .edit-btn-container .edit {
  color: inherit;
  font-size: 21px;
  line-height: 1;
}
.timeline-item.user-content .edit-btn-container .edit .octicon-check {
  font-size: 1em;
}
.timeline-item.user-content .edit-btn-container .edit:hover,
.timeline-item.user-content .edit-btn-container .edit:focus {
  color: #000;
}
.timeline-item.user-content .comment-likes {
  margin-left: 5px;
}
.timeline-item.user-content .media-body:after,
.timeline-item.user-content .media-body:before {
  right: 100%;
  top: 15px;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}
.timeline-item.user-content .media-body:after {
  border-color: rgba(136, 183, 213, 0);
  border-right-color: #fafbfc;
  border-width: 6px;
  margin-top: -6px;
}
.timeline-item.user-content .media-body:before {
  border-color: rgba(194, 225, 245, 0);
  border-right-color: #d1d8dd;
  border-width: 7px;
  margin-top: -7px;
}
.timeline-item.notification-content {
  padding-left: 30px;
  margin: 30px 0px;
  position: relative;
  color: #8D99A6;
}
.timeline-item.notification-content * {
  color: #8D99A6;
}
.timeline-item.notification-content .fa-fw {
  margin-left: 36px;
}
.timeline-item.notification-content div.small {
  padding-left: 40px;
}
.timeline-item.notification-content div.small .fa-fw {
  margin-left: 0px;
}
.timeline-item.notification-content .octicon-heart {
  color: #ff5858 !important;
}
.timeline-item.notification-content::before {
  content: " ";
  width: 7px;
  height: 7px;
  background-color: #d1d8dd;
  position: absolute;
  left: 40px;
  border-radius: 50%;
  top: 5px;
}
.timeline-item .reply-link {
  padding-left: 7px;
}
.timeline-head {
  background-color: white;
  border: 1px solid #d1d8dd;
  border-radius: 3px;
  position: relative;
  z-index: 1;
}
.timeline-head .comment-input-header {
  background-color: #fafbfc;
  padding: 7px 15px;
  border-bottom: 1px solid #EBEFF2;
}
.timeline-head .comment-input-container {
  padding: 15px;
}
.timeline-head .comment-input-container .awesomplete > ul {
  min-width: 200px;
}
.timeline-head .comment-input {
  border-color: #EBEFF2;
  max-width: 100%;
}
.timeline-head .comment-input:focus {
  box-shadow: none;
}
@media (max-width: 767px) {
  .timeline-head {
    border-left: none;
    border-right: none;
    border-radius: 0px;
  }
}
.signature-field {
  min-height: 300px;
  background: #fff;
  border: 1px solid #d1d8dd;
  border-radius: 3px;
  position: relative;
  margin-top: -10px;
}
.signature-display {
  margin: 7px 0px;
  background: #fff;
}
.signature-btn-row {
  position: absolute;
  bottom: 12px;
  right: 12px;
}
.signature-reset {
  height: 30px;
  width: 30px;
  padding: 4px 0px;
}
.signature-img {
  border: 1px solid #d1d8dd;
  background: #fff;
  border-radius: 3px;
  margin-top: 5px;
  width: 100%;
  max-height: 300px;
}
.timeline-new-email {
  margin: 30px 0px;
  padding-left: 70px;
  position: relative;
}
.timeline-new-email::before {
  content: " ";
  width: 7px;
  height: 7px;
  background-color: #d1d8dd;
  position: absolute;
  left: 40px;
  border-radius: 50%;
  top: 5px;
}
.form-footer h5 {
  margin: 15px 0px;
  font-weight: bold;
}
.control-label,
.grid-heading-row {
  color: #8D99A6;
  font-size: 12px;
}
.control-label {
  margin-bottom: 5px;
  font-weight: normal;
}
.like-disabled-input {
  margin-bottom: 7px;
  min-height: 30px;
  font-weight: bold;
  background-color: #f5f7fa;
  padding: 5px 10px;
  border-radius: 3px;
}
.disabled-check {
  color: #f5f7fa;
  margin-right: 3px;
  margin-bottom: -2px;
}
.like-disabled-input.for-description {
  font-weight: normal;
  font-size: 12px;
}
.frappe-control {
  margin-bottom: 10px;
}
.frappe-control .help-box {
  margin-top: 3px;
}
.frappe-control pre {
  white-space: pre-wrap;
  background-color: inherit;
  border: none;
  padding: 0px;
  margin: 0px;
}
.hide-control {
  display: none !important;
}
.shared-user {
  margin-bottom: 10px;
}
.attach-missing-image,
.attach-image-display {
  cursor: pointer;
}
select.form-control {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
.form-control.bold {
  color: #000;
  font-weight: bold;
  background-color: #fffdf4;
}
.form-control[data-fieldtype="Password"] {
  position: inherit;
}
.password-strength-indicator {
  float: right;
  padding: 15px;
  margin-top: -41px;
  margin-right: -7px;
}
.password-strength-message {
  margin-top: -10px;
}
.delivery-status-indicator {
  display: inline-block;
  margin-top: -3px;
  margin-left: 1px;
  font-weight: 500;
  color: #8D99A6;
}
/* ... */

